DEC-661. Fixed horizontal scrolling on mozilla

--- a/apps/frontend/pages/index.scss
+++ b/apps/frontend/pages/index.scss
@@ -8,6 +8,7 @@ body {
     font-size: 12px;
     background: #000000;
     color: #fff;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar-thumb {
       background: transparent;
